--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -95,6 +95,8 @@
 \newcommand{\scat}[1]{{\textsc{\text{#1}}}}
 \newcommand{\alg}[1]{{\texttt{#1}}}
 
+\DeclareMathOperator{\cod}{cod}
+\DeclareMathOperator{\dom}{dom}
 \DeclareMathOperator{\ca}{ca}
 \DeclareMathOperator{\view}{view}
 \DeclareMathOperator{\exec}{exec}
